--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "i18next-browser-languagedetector": "^8.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^15.4.1"
+    "react-i18next": "^15.4.1",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
